# bot_fauna3

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.py
.github/workflows/: docker-image.yml  docker-publish.yml
app/: container.py  database.py  logger.py
app/config/: commands.py  config.py  logger.py  messages.py
app/handlers/admin/: _register_admin.py  delete_admin.py  edit_admin.py  upload_admin.py
app/handlers/test/: products.jsom  test.py
app/handlers/user/: _register_user.py  catalog.py  common.py  contacts.py  favourites.py
app/keyboards/admin/: admin.py
app/keyboards/user/: catalog.py  categoties.py
app/middlewares/: logger.py  trottling.py
app/models/: plant.py  user.py
app/services/: plant.py  user.py
app/states/admin/: admin.py  delete_admin.py  edit_admin.py  upload_admin.py
app/states/user/: catalog.py
